--- a/Healthtechbd/AddPrescription.xaml
+++ b/Healthtechbd/AddPrescription.xaml
@@ -153,7 +153,7 @@
                                     <Border Grid.Row="2" Padding="5">
                                         <StackPanel  Orientation="Horizontal">
                                             <TextBlock  FontWeight="SemiBold" Margin="0 0 5 0" Text="Last Visit Date:" VerticalAlignment="Center"/>
-                                            <TextBlock Foreground="#7d7d7d" Margin="2 0 0 0" Text="22 April 2018" VerticalAlignment="Center"/>
+                                            <TextBlock x:Name="PatientLastVisit" Foreground="#7d7d7d" Margin="2 0 0 0" Text="" VerticalAlignment="Center"/>
                                         </StackPanel>
                                     </Border>
 
@@ -180,13 +180,7 @@
                             <ScrollViewer Background="#EBEBEB"  FontSize="14" Foreground="#7d7d7d" Height="140" VerticalScrollBarVisibility="Auto">
 
                                 <Border Padding="3" Background="#EBEBEB">
-                                    <StackPanel>
-                                        <TextBlock Padding="10 5" Text="06 April 2018" VerticalAlignment="Center"/>
-                                        <TextBlock Padding="10 5" Text="06 April 2018" VerticalAlignment="Center"/>
-                                        <TextBlock Padding="10 5" Text="06 April 2018" VerticalAlignment="Center"/>
-                                        <TextBlock Padding="10 5" Text="06 April 2018" VerticalAlignment="Center"/>
-                                        <TextBlock Padding="10 5" Text="06 April 2018" VerticalAlignment="Center"/>
-                                    </StackPanel>
+                                    <StackPanel x:Name="AllPrescription"/>
                                 </Border>
 
                             </ScrollViewer>
