--- a/Healthtechbd/EditPrescription.xaml
+++ b/Healthtechbd/EditPrescription.xaml
@@ -152,7 +152,7 @@
                                     <Border Grid.Row="2" Padding="5">
                                         <StackPanel  Orientation="Horizontal">
                                             <TextBlock  FontWeight="SemiBold" Margin="0 0 5 0" Text="Last Visit Date:" VerticalAlignment="Center"/>
-                                            <TextBlock Foreground="#7d7d7d" Margin="2 0 0 0" Text="22 April 2018" VerticalAlignment="Center"/>
+                                            <TextBlock x:Name="PatientLastVisit" Foreground="#7d7d7d" Margin="2 0 0 0" Text="" VerticalAlignment="Center"/>
                                         </StackPanel>
                                     </Border>
 
@@ -179,13 +179,7 @@
                             <ScrollViewer Background="#EBEBEB"  FontSize="14" Foreground="#7d7d7d" Height="140" VerticalScrollBarVisibility="Auto">
 
                                 <Border Padding="3" Background="#EBEBEB">
-                                    <StackPanel>
-                                        <TextBlock Padding="10 5" Text="06 April 2018" VerticalAlignment="Center"/>
-                                        <TextBlock Padding="10 5" Text="06 April 2018" VerticalAlignment="Center"/>
-                                        <TextBlock Padding="10 5" Text="06 April 2018" VerticalAlignment="Center"/>
-                                        <TextBlock Padding="10 5" Text="06 April 2018" VerticalAlignment="Center"/>
-                                        <TextBlock Padding="10 5" Text="06 April 2018" VerticalAlignment="Center"/>
-                                    </StackPanel>
+                                    <StackPanel x:Name="AllPrescription" />
                                 </Border>
 
                             </ScrollViewer>
@@ -285,7 +279,7 @@
                         <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2">
                             <Button x:Name="CancelUpdatePrescription" Content="CANCEL" HorizontalAlignment="Left" Margin="13 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35" Foreground="#2c3144" Background="#edf1f5" Click="CancelUpdatePrescription_Click"/>
                             <Button x:Name="UpdatePrescription" Content="UPDATE" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35" Background="#3CC2BB" Click="UpdatePrescription_Click" />
-                            <Button x:Name="UpdatePrintPrescription" Content="SAVE AND PRINT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" />
+                            <Button x:Name="UpdatePrintPrescription" Content="SAVE AND PRINT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="UpdatePrescription_Click" />
                         </StackPanel>
 
                     </Grid>
