--- a/Healthtechbd/EditPrescription.xaml
+++ b/Healthtechbd/EditPrescription.xaml
@@ -202,9 +202,11 @@
 
                                     <!--<ScrollViewer VerticalScrollBarVisibility="Auto" Padding="8" Background="#fff" Height="245">-->
                                     <Grid Background="#fff" Height="245">
-                                        <WrapPanel x:Name="DiagnosisCheckbox" Margin="5 10" VerticalAlignment="Top" Orientation="Horizontal">
+                                        <ScrollViewer Margin="0 -12 0 0" Height="233" VerticalScrollBarVisibility="Auto">
+                                            <WrapPanel x:Name="DiagnosisCheckbox" Margin="5 10" VerticalAlignment="Top" Orientation="Horizontal">
 
-                                        </WrapPanel>
+                                            </WrapPanel>
+                                        </ScrollViewer>
                                     </Grid>
 
                                 </StackPanel>
