--- a/Healthtechbd/prescriptionTemplates/CustomTemplate.xaml
+++ b/Healthtechbd/prescriptionTemplates/CustomTemplate.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="Healthtechbd.prescriptionTemplates.ClassicTemplate"
+﻿<Page x:Class="Healthtechbd.prescriptionTemplates.CustomTemplate"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Healthtechbd.prescriptionTemplates"
       mc:Ignorable="d" 
-      d:DesignHeight="500" d:DesignWidth="800"
-      Title="ClassicTemplate">
+      d:DesignHeight="5500" d:DesignWidth="800"
+      Title="CustomTemplate">
 
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <StackPanel>
@@ -40,18 +40,25 @@
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
                         </Grid.RowDefinitions>
 
                         <!--Doctors Info-->
-                        <Border Background="#00A8DC" Padding="0 20 0 0" Grid.Row="0">
+                        <Border Padding="0 20 0 0" Grid.Row="0">
+                            <Border.Background>
+                                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                                    <GradientStop Color="#DA4138"/>
+                                    <GradientStop Color="#DE3078" Offset="0.464"/>
+                                    <GradientStop Color="#EFAA80" Offset="0.97"/>
+                                </LinearGradientBrush>
+                            </Border.Background>
+
                             <Grid>
                                 <StackPanel Margin="15 0">
                                     <TextBlock x:Name="DoctorName" Style="{StaticResource Level}" Foreground="#000" FontSize="15" Text="Arafat Khan"/>
 
-                                    <Border Margin="0 0 0 5" HorizontalAlignment="Left" Width="300" BorderThickness="1" BorderBrush="#fff" Padding="5 10 5 5">
-                                        <TextBlock TextWrapping="WrapWithOverflow" x:Name="DoctorQualification" Style="{StaticResource Level}" Foreground="#fff" Text="MBBS; FCPS( Medicine), MBBS; FCPS( Medicine), MBBS; FCPS( Medicine)"/>
-                                    </Border>
-
+                                    <TextBlock Width="300" HorizontalAlignment="Left" TextWrapping="WrapWithOverflow" x:Name="DoctorQualification" Style="{StaticResource Level}" Foreground="#fff" Text="MBBS; FCPS( Medicine), MBBS; FCPS( Medicine), MBBS; FCPS( Medicine)"/>
                                     <TextBlock x:Name="DoctorClinicName" Style="{StaticResource Level}" Foreground="#000" Text="Clinic Name"/>
                                     <TextBlock x:Name="DoctorAddress" Style="{StaticResource Level}" Foreground="#000" Text="384/1 , West Nakhalpara,Tejgaon, Mohakhali"/>
 
@@ -64,7 +71,6 @@
                             </Grid>
                         </Border>
 
-                        <!--Patient & Last Visit Date-->
                         <Border Padding="12" Grid.Row="1">
                             <Grid>
                                 <Grid.ColumnDefinitions>
@@ -97,9 +103,10 @@
                             </Grid>
                         </Border>
 
+                        <!--Border-->
                         <Border Margin="10 0" Grid.Column="2" Height="2" Grid.Row="2" Background="#000"/>
 
-                        <!--Medicines-->
+                        <!--Diagnosis-->
                         <Border Padding="12" Grid.Row="3">
                             <Grid>
 
@@ -109,43 +116,79 @@
                                     <ColumnDefinition></ColumnDefinition>
                                 </Grid.ColumnDefinitions>
 
-                                <DockPanel LastChildFill="False" Grid.Column="0">
-                                    <Grid>
+                                <Border Grid.Column="0">
+                                    <TextBlock FontWeight="Bold" Style="{StaticResource Level}" Text="Diagnosis:"/>
+                                </Border>
 
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto" ></RowDefinition>
-                                            <RowDefinition Height="Auto" ></RowDefinition>
-                                        </Grid.RowDefinitions>
+                                <Border Grid.Column="1">
+                                    <DockPanel LastChildFill="False" Grid.Column="0">
+                                        <Grid>
+                                            <StackPanel Grid.Row="0" x:Name="PatientDiagnosis">
 
-                                        <StackPanel Grid.Row="0" x:Name="PatientDiagnosis">
-                                            <TextBlock FontWeight="Bold" Style="{StaticResource Level}" Text="Diagnosis:"/>
+                                                <!--<TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Diagnosis 1"/>
+                                                <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Diagnosis 2"/>
+                                                <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Diagnosis 3"/>-->
 
-                                            <!--<TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Diagnosis 1"/>
-                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Diagnosis 2"/>
-                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Diagnosis 3"/>-->
-                                            
-                                        </StackPanel>
+                                            </StackPanel>
+                                        </Grid>
+                                    </DockPanel>
+                                </Border>
+                            </Grid>
+                        </Border>
 
-                                        <StackPanel Margin="0 6 0 0" x:Name="PatientExamination" Grid.Row="1">
-                                            <TextBlock FontWeight="Bold" Style="{StaticResource Level}" Text="Tests:"/>
+                        <!--Border-->
+                        <Border Margin="10 0" Grid.Column="2" Height="2" Grid.Row="4" Background="#000"/>
 
-                                            <!--<TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Test 1"/>
-                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Test 2"/>
-                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Test 3"/>-->
+                        <!--Tests-->
+                        <Border Padding="12" Grid.Row="5">
+                            <Grid>
 
-                                        </StackPanel>
-                                    </Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition></ColumnDefinition>
+                                    <ColumnDefinition></ColumnDefinition>
+                                    <ColumnDefinition></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
 
-                                    <Rectangle Width="2" Fill="Black" DockPanel.Dock="Right"/>
-                                </DockPanel>
+                                <Border Grid.Column="0">
+                                    <TextBlock FontWeight="Bold" Style="{StaticResource Level}" Text="Tests:"/>
+                                </Border>
 
+                                <Border Grid.Column="1">
+                                    <DockPanel LastChildFill="False" Grid.Column="0">
+                                        <Grid>
+                                            <StackPanel Margin="0 6 0 0" x:Name="PatientExamination" Grid.Row="1">
 
+                                                <!--<TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Test 1"/>
+                                                <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Test 2"/>
+                                                <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Test 3"/>-->
 
-                                <!--Medicines-->
-                                <Border Grid.Column="1" x:Name="PrescriptioMedicinesArea" Padding="12 0">
+                                            </StackPanel>
+                                        </Grid>
+                                    </DockPanel>
+                                </Border>
+                            </Grid>
+                        </Border>
+
+                        <!--Border-->
+                        <Border Margin="10 0" Grid.Column="2" Height="2" Grid.Row="6" Background="#000"/>
+
+                        <!--Medicines-->
+                        <Border Padding="12" Grid.Row="7">
+                            <Grid>
+
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition></ColumnDefinition>
+                                    <ColumnDefinition></ColumnDefinition>
+                                    <ColumnDefinition></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+
+                                <Border Grid.Column="0">
+                                    <TextBlock FontWeight="Bold" Style="{StaticResource Level}" Text="Medicines:"/>
+                                </Border>
+
+                                <Border Grid.Column="1">
                                     <Grid>
                                         <StackPanel x:Name="PrescriptioMedicines" Margin="5 0">
-                                            <TextBlock FontWeight="Bold" Style="{StaticResource Level}" Text="Medicines:"/>
 
                                             <!--<StackPanel Orientation="Horizontal">
                                                 <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Premil 2 Tablet :"/>
@@ -177,14 +220,23 @@
                                         <TextBlock x:Name="CreatedDate" FontWeight="Normal" Style="{StaticResource Level}" Text="23 April 2018"/>
                                     </StackPanel>
                                 </Border>
-
+                                
                             </Grid>
                         </Border>
 
-                        <Border Margin="10 0" Grid.Column="2" Height="2" Grid.Row="5" Background="#00A8DC"/>
+                        <!--Notes Top Border-->
+                        <Border Margin="10 0" Grid.Column="2" Height="2" Grid.Row="8">
+                            <Border.Background>
+                                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                                    <GradientStop Color="#DA4138"/>
+                                    <GradientStop Color="#DE3078" Offset="0.464"/>
+                                    <GradientStop Color="#EFAA80" Offset="0.97"/>
+                                </LinearGradientBrush>
+                            </Border.Background>
+                        </Border>
 
                         <!--Doctors Note-->
-                        <Border x:Name="DoctorsNoteArea" Padding="12 0" Grid.Row="6">
+                        <Border x:Name="DoctorsNoteArea" Padding="12 0" Grid.Row="9">
                             <Grid>
                                 <StackPanel>
                                     <TextBlock TextWrapping="WrapWithOverflow" x:Name="DoctorsNote" FontWeight="Normal" Style="{StaticResource Level}" Text="Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1"/>
@@ -192,8 +244,17 @@
                             </Grid>
                         </Border>
 
-                        <!--Singnature & Date-->
-                        <Border Margin="0 100 0 0" Background="#00A8DC" Padding="12" Grid.Row="8">
+                        <!--Footer-->
+                        <Border Margin="0 100 0 0" Padding="12" Grid.Row="10">
+
+                            <Border.Background>
+                                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                                    <GradientStop Color="#DA4138"/>
+                                    <GradientStop Color="#DE3078" Offset="0.464"/>
+                                    <GradientStop Color="#EFAA80" Offset="0.97"/>
+                                </LinearGradientBrush>
+                            </Border.Background>
+
                             <Grid>
 
                                 <Grid.ColumnDefinitions>
