--- a/Healthtechbd/prescriptionTemplates/GeneralTemplate.xaml
+++ b/Healthtechbd/prescriptionTemplates/GeneralTemplate.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="Healthtechbd.prescriptionTemplates.ClassicTemplate"
+﻿<Page x:Class="Healthtechbd.prescriptionTemplates.GeneralTemplate"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Healthtechbd.prescriptionTemplates"
       mc:Ignorable="d" 
-      d:DesignHeight="500" d:DesignWidth="800"
-      Title="ClassicTemplate">
+      d:DesignHeight="5500" d:DesignWidth="800"
+      Title="GeneralTemplate">
 
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <StackPanel>
@@ -43,15 +43,12 @@
                         </Grid.RowDefinitions>
 
                         <!--Doctors Info-->
-                        <Border Background="#00A8DC" Padding="0 20 0 0" Grid.Row="0">
+                        <Border Background="#BCA48C" Padding="0 20 0 0" Grid.Row="0">
                             <Grid>
                                 <StackPanel Margin="15 0">
                                     <TextBlock x:Name="DoctorName" Style="{StaticResource Level}" Foreground="#000" FontSize="15" Text="Arafat Khan"/>
 
-                                    <Border Margin="0 0 0 5" HorizontalAlignment="Left" Width="300" BorderThickness="1" BorderBrush="#fff" Padding="5 10 5 5">
-                                        <TextBlock TextWrapping="WrapWithOverflow" x:Name="DoctorQualification" Style="{StaticResource Level}" Foreground="#fff" Text="MBBS; FCPS( Medicine), MBBS; FCPS( Medicine), MBBS; FCPS( Medicine)"/>
-                                    </Border>
-
+                                    <TextBlock Width="300" HorizontalAlignment="Left" TextWrapping="WrapWithOverflow" x:Name="DoctorQualification" Style="{StaticResource Level}" Foreground="#fff" Text="MBBS; FCPS( Medicine), MBBS; FCPS( Medicine), MBBS; FCPS( Medicine)"/>
                                     <TextBlock x:Name="DoctorClinicName" Style="{StaticResource Level}" Foreground="#000" Text="Clinic Name"/>
                                     <TextBlock x:Name="DoctorAddress" Style="{StaticResource Level}" Foreground="#000" Text="384/1 , West Nakhalpara,Tejgaon, Mohakhali"/>
 
@@ -59,12 +56,14 @@
                                         <TextBlock Style="{StaticResource Level}" Foreground="#fff" Text="Call : "/>
                                         <TextBlock x:Name="DoctorPhone" Style="{StaticResource Level}" Foreground="#fff" Text="34565"/>
                                     </StackPanel>
+                                    
                                     <TextBlock x:Name="DoctorWebsite" Style="{StaticResource Level}" Foreground="#fff" Text="www.sitename.com"/>
+                                
                                 </StackPanel>
                             </Grid>
                         </Border>
 
-                        <!--Patient & Last Visit Date-->
+                        <!--Patient-->
                         <Border Padding="12" Grid.Row="1">
                             <Grid>
                                 <Grid.ColumnDefinitions>
@@ -97,10 +96,59 @@
                             </Grid>
                         </Border>
 
-                        <Border Margin="10 0" Grid.Column="2" Height="2" Grid.Row="2" Background="#000"/>
-
-                        <!--Medicines-->
+                        <!--Border-->
+                        <Border Margin="10 0" Height="2" Grid.Row="2" Background="#000"/>
+                       
                         <Border Padding="12" Grid.Row="3">
+                            <Grid>
+
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition></ColumnDefinition>
+                                    <ColumnDefinition></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+
+                                <!--Diagnosis-->
+                                <DockPanel LastChildFill="False" Grid.Column="0">
+                                    <Grid>
+
+                                        <StackPanel x:Name="PatientDiagnosis">
+                                            <TextBlock FontWeight="Bold" Style="{StaticResource Level}" Text="Diagnosis:"/>
+
+                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Diagnosis 1"/>
+                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Diagnosis 2"/>
+                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Diagnosis 3"/>
+
+                                        </StackPanel>
+                                       
+                                    </Grid>
+
+                                    <Rectangle Width="2" Fill="Black" DockPanel.Dock="Right"/>
+                                </DockPanel>
+
+
+                                <!--Tests-->
+                                <Border Grid.Column="1" Margin="72 0 0 0" Padding="12 0">
+                                    <Grid>
+
+                                        <StackPanel Margin="0 6 0 0" x:Name="PatientExamination" Grid.Row="1">
+                                            <TextBlock FontWeight="Bold" Style="{StaticResource Level}" Text="Tests:"/>
+
+                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Test 1"/>
+                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Test 2"/>
+                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Test 3"/>
+
+                                        </StackPanel>
+
+                                    </Grid>
+                                </Border>
+
+                            </Grid>
+                        </Border>
+
+                        <!--Border-->
+                        <Border Margin="10 0" Height="2" Grid.Row="4" Background="#000"/>
+
+                        <Border Padding="12" Grid.Row="5">
                             <Grid>
 
                                 <Grid.ColumnDefinitions>
@@ -109,82 +157,47 @@
                                     <ColumnDefinition></ColumnDefinition>
                                 </Grid.ColumnDefinitions>
 
-                                <DockPanel LastChildFill="False" Grid.Column="0">
-                                    <Grid>
+                                <StackPanel HorizontalAlignment="Center" Grid.Column="1" x:Name="PrescriptioMedicines" Margin="5 0">
+                                    <TextBlock FontWeight="Bold" Style="{StaticResource Level}" Text="Medicines:"/>
 
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto" ></RowDefinition>
-                                            <RowDefinition Height="Auto" ></RowDefinition>
-                                        </Grid.RowDefinitions>
-
-                                        <StackPanel Grid.Row="0" x:Name="PatientDiagnosis">
-                                            <TextBlock FontWeight="Bold" Style="{StaticResource Level}" Text="Diagnosis:"/>
-
-                                            <!--<TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Diagnosis 1"/>
-                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Diagnosis 2"/>
-                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Diagnosis 3"/>-->
                                             
-                                        </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Premil 2 Tablet :"/>
+                                        <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Text="( 1-1-1 )"/>
+                                    </StackPanel>
 
-                                        <StackPanel Margin="0 6 0 0" x:Name="PatientExamination" Grid.Row="1">
-                                            <TextBlock FontWeight="Bold" Style="{StaticResource Level}" Text="Tests:"/>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock FontWeight="Normal" Margin="0 0 3 0" Style="{StaticResource Level}" Text="Igen Eye Drops :"/>
+                                        <TextBlock FontWeight="Normal"  Style="{StaticResource Level}" Text=" ( 1+1+1 )"/>
+                                    </StackPanel>
 
-                                            <!--<TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Test 1"/>
-                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Test 2"/>
-                                            <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Test 3"/>-->
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock FontWeight="Normal" Margin="0 0 3 0" Style="{StaticResource Level}" Text="Skinabin Cream :"/>
+                                        <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Text="( 1-1-1 )"/>
+                                    </StackPanel>
 
-                                        </StackPanel>
-                                    </Grid>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock FontWeight="Normal" Margin="0 0 3 0" Style="{StaticResource Level}" Text="Aciflox 200 Tablet :"/>
+                                        <TextBlock FontWeight="Normal"  Style="{StaticResource Level}" Text=" ( 1+1+1 )"/>
+                                    </StackPanel>
 
-                                    <Rectangle Width="2" Fill="Black" DockPanel.Dock="Right"/>
-                                </DockPanel>
+                                </StackPanel>
 
-
-
-                                <!--Medicines-->
-                                <Border Grid.Column="1" x:Name="PrescriptioMedicinesArea" Padding="12 0">
-                                    <Grid>
-                                        <StackPanel x:Name="PrescriptioMedicines" Margin="5 0">
-                                            <TextBlock FontWeight="Bold" Style="{StaticResource Level}" Text="Medicines:"/>
-
-                                            <!--<StackPanel Orientation="Horizontal">
-                                                <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Premil 2 Tablet :"/>
-                                                <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Text="( 1-1-1 )"/>
-                                            </StackPanel>
-
-                                            <StackPanel Orientation="Horizontal">
-                                                <TextBlock FontWeight="Normal" Margin="0 0 3 0" Style="{StaticResource Level}" Text="Igen Eye Drops :"/>
-                                                <TextBlock FontWeight="Normal"  Style="{StaticResource Level}" Text=" ( 1+1+1 )"/>
-                                            </StackPanel>
-
-                                            <StackPanel Orientation="Horizontal">
-                                                <TextBlock FontWeight="Normal" Margin="0 0 3 0" Style="{StaticResource Level}" Text="Skinabin Cream :"/>
-                                                <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Text="( 1-1-1 )"/>
-                                            </StackPanel>
-
-                                            <StackPanel Orientation="Horizontal">
-                                                <TextBlock FontWeight="Normal" Margin="0 0 3 0" Style="{StaticResource Level}" Text="Aciflox 200 Tablet :"/>
-                                                <TextBlock FontWeight="Normal"  Style="{StaticResource Level}" Text=" ( 1+1+1 )"/>
-                                            </StackPanel>-->
-
-                                        </StackPanel>
-                                    </Grid>
-                                </Border>
-
+                                <!--Date-->
                                 <Border Grid.Column="2">
                                     <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
                                         <TextBlock Margin="0 0 3 0" Style="{StaticResource Level}" Text="Date :"/>
                                         <TextBlock x:Name="CreatedDate" FontWeight="Normal" Style="{StaticResource Level}" Text="23 April 2018"/>
                                     </StackPanel>
                                 </Border>
-
                             </Grid>
                         </Border>
 
-                        <Border Margin="10 0" Grid.Column="2" Height="2" Grid.Row="5" Background="#00A8DC"/>
+                        <!--Border-->
+                        <Border Margin="10 0" Height="2" Grid.Row="6" Background="#BCA48C"/>
 
                         <!--Doctors Note-->
-                        <Border x:Name="DoctorsNoteArea" Padding="12 0" Grid.Row="6">
+                        <Border x:Name="DoctorsNoteArea" Padding="12 0" Grid.Row="7">
                             <Grid>
                                 <StackPanel>
                                     <TextBlock TextWrapping="WrapWithOverflow" x:Name="DoctorsNote" FontWeight="Normal" Style="{StaticResource Level}" Text="Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1 Instructions goes here1, instructions goes here1"/>
@@ -193,7 +206,7 @@
                         </Border>
 
                         <!--Singnature & Date-->
-                        <Border Margin="0 100 0 0" Background="#00A8DC" Padding="12" Grid.Row="8">
+                        <Border Margin="0 100 0 0" Background="#BCA48C" Padding="12" Grid.Row="8">
                             <Grid>
 
                                 <Grid.ColumnDefinitions>
@@ -205,15 +218,15 @@
                                 <StackPanel Grid.Column="0">
                                     <TextBlock TextAlignment="Center" Style="{StaticResource Level}" Foreground="Black" FontSize="20" Text="Cember:"/>
 
-                                    <TextBlock TextAlignment="Center" Style="{StaticResource Level}" FontWeight="Normal" Foreground="#000" Text="Islamic Bank Hospital"/>
-                                    <TextBlock TextAlignment="Center" Style="{StaticResource Level}" FontWeight="Normal" Foreground="#000" Text="Lokkhipur Mour, Rajshahi"/>
+                                    <TextBlock TextAlignment="Center" Style="{StaticResource Level}" FontWeight="Normal" Foreground="#fff" Text="Islamic Bank Hospital"/>
+                                    <TextBlock TextAlignment="Center" Style="{StaticResource Level}" FontWeight="Normal" Foreground="#fff" Text="Lokkhipur Mour, Rajshahi"/>
                                 </StackPanel>
 
                                 <StackPanel Grid.Column="2">
                                     <TextBlock TextAlignment="Center" Style="{StaticResource Level}" Foreground="Black" FontSize="20" Text="Patient Show Time:"/>
 
-                                    <TextBlock TextAlignment="Center" Style="{StaticResource Level}" FontWeight="Normal" Foreground="#000" Text="Everyday Midday 2.30PM - Night 8PM"/>
-                                    <TextBlock TextAlignment="Center" Style="{StaticResource Level}" FontWeight="Normal" Foreground="#000" Text="( Friday Off )"/>
+                                    <TextBlock TextAlignment="Center" Style="{StaticResource Level}" FontWeight="Normal" Foreground="#fff" Text="Everyday Midday 2.30PM - Night 8PM"/>
+                                    <TextBlock TextAlignment="Center" Style="{StaticResource Level}" FontWeight="Normal" Foreground="#fff" Text="( Friday Off )"/>
                                 </StackPanel>
                             </Grid>
                         </Border>
