--- a/Healthtechbd/prescriptionTemplates/GeneralTemplate.xaml
+++ b/Healthtechbd/prescriptionTemplates/GeneralTemplate.xaml
@@ -24,6 +24,16 @@
                 <Button x:Name="ButtonEditPrescription" Content="EDIT PRESCRIPTION" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="36"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,12,22,12" Click="ButtonEditPrescription_Click"/>
             </Grid>
 
+            <Grid MinHeight="60" Margin="0 10 0 0" Background="#fff" VerticalAlignment="Center">
+                <Border Margin="20 0 0 0">
+                    <Grid VerticalAlignment="Center">
+                        <WrapPanel x:Name="MorePrescriptions">
+                            <TextBlock Foreground="#5d5d5d" FontWeight="SemiBold" Style="{StaticResource BreadcrumbItem}" Text="Prescriptions: "/>
+                        </WrapPanel>
+                    </Grid>
+                </Border>
+            </Grid>
+            
             <!--Page Heading Bottom-->
             <Border Margin="20">
                 <StackPanel x:Name="PrintArea">
