--- a/Healthtechbd/prescriptionTemplates/StandardTemplate.xaml
+++ b/Healthtechbd/prescriptionTemplates/StandardTemplate.xaml
@@ -1,13 +1,12 @@
-﻿<Page x:Class="Healthtechbd.ViewPrescription"
+﻿<Page x:Class="Healthtechbd.prescriptionTemplates.StandardTemplate"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Healthtechbd"
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:local="clr-namespace:Healthtechbd.prescriptionTemplates"
       mc:Ignorable="d" 
       d:DesignHeight="500" d:DesignWidth="800"
-      Title="ViewPrescription">
+      Title="StandardTemplate">
 
     <Page.Resources>
         <Style TargetType="Separator">
@@ -28,6 +27,16 @@
 
                 <Button x:Name="ButtonPrintPrescription" Margin="0,13,184,12" Content="PRINT" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonPrintPrescription_Click" />
                 <Button x:Name="ButtonEditPrescription" Content="EDIT PRESCRIPTION" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="36"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,12,22,12" Click="ButtonEditPrescription_Click"/>
+            </Grid>
+
+            <Grid MinHeight="60" Margin="0 10 0 0" Background="#fff" VerticalAlignment="Center">
+                <Border Margin="20 0 0 0">
+                    <Grid VerticalAlignment="Center">
+                        <WrapPanel x:Name="MorePrescriptions">
+                            <TextBlock Foreground="#5d5d5d" FontWeight="SemiBold" Style="{StaticResource BreadcrumbItem}" Text="Prescriptions: "/>
+                        </WrapPanel>
+                    </Grid>
+                </Border>
             </Grid>
 
             <!--Page Heading Bottom-->
