--- a/Healthtechbd/AdminPanelWindow.xaml
+++ b/Healthtechbd/AdminPanelWindow.xaml
@@ -37,7 +37,7 @@
                         </Grid>
                         
                         <Grid>
-                            <materialDesign:PackIcon Kind="Image" VerticalAlignment="Center" Foreground="#576069" />
+                            <materialDesign:PackIcon Kind="ViewQuilt" VerticalAlignment="Center" Foreground="#576069" />
                             <Button x:Name="ButtonChangePrescriptionTem" Content="Change Prescription Template" Foreground="#576069" VerticalAlignment="Center" Margin="3 0 0 0" Click="ButtonChangePrescriptionTem_Click" />
                         </Grid>
 
