--- a/Healthtechbd/EditPrescription.xaml
+++ b/Healthtechbd/EditPrescription.xaml
@@ -198,7 +198,7 @@
                             <Border CornerRadius="5 5 0 0" Background="#EBEBEB" Padding="8 8">
 
                                 <StackPanel>
-                                    <TextBlock Text="Diagnosis" Foreground="#333" FontWeight="SemiBold" Margin="0 10 0 5"/>
+                                    <TextBlock Text="Diagnosis*" Foreground="#333" FontWeight="SemiBold" Margin="0 10 0 5"/>
 
                                     <Grid Background="#fff" Height="118">
                                         <!--<ScrollViewer Margin="0 -12 0 0" Height="233" VerticalScrollBarVisibility="Auto">-->
