prescription view daynamic chember and visiting time add,  all index page scroll problem fix

--- a/Healthtechbd/AddDiagnosisTemplate.xaml
+++ b/Healthtechbd/AddDiagnosisTemplate.xaml
@@ -62,7 +62,7 @@
                             </StackPanel>
 
                             <StackPanel Grid.Row="0" Grid.Column="1"  Margin="5 0">
-                                <TextBlock Style="{StaticResource Level}" Text="Instructions *"/>
+                                <TextBlock Style="{StaticResource Level}" Text="Instructions"/>
                                 <TextBox x:Name="Instruction" Style="{StaticResource InputField}" Text=""/>
                             </StackPanel>
 
