--- a/Healthtechbd/DiagnosisTemplates.xaml
+++ b/Healthtechbd/DiagnosisTemplates.xaml
@@ -24,7 +24,7 @@
 
 
         <!--Page Heading Bottom-->
-        <Border Margin="20" Height="430">
+        <Border Margin="20" MinHeight="300">
             <StackPanel>
                 <!--Search Section-->
                 <Grid Height="60" Background="#F6F8F7">
@@ -36,7 +36,7 @@
                             <ColumnDefinition Width="80"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
 
-                        <TextBox x:Name="searchField" Style="{StaticResource SearchBox}" Grid.Column="0" Text=""/>
+                        <TextBox x:Name="searchField" Style="{StaticResource SearchBox}" Grid.Column="0" Text="" TextChanged="searchField_TextChanged"/>
                         <Button x:Name="btnSearch" Style="{StaticResource SearchButton}" Grid.Column="1" Margin="0 0 10 0" Click="btnSearch_Click">
                             <materialDesign:PackIcon Kind="DatabaseSearch"/>
                         </Button>
@@ -45,40 +45,38 @@
                 </Grid>
 
                 <!--Info Area-->
-                <ScrollViewer VerticalScrollBarVisibility="Auto" Background="#FFFFFF" Height="370">
                     <Border Padding="10 0">
                         <Grid>
-                            <DataGrid AutoGenerateColumns="False" CanUserAddRows="False" x:Name="dataGridDiagnosisTemplates" ItemsSource="{Binding}" HorizontalAlignment="Left" Margin="-10, 0, 10, 0" Background="White">
-                                <DataGrid.Columns>
-                                    <DataGridTextColumn Width="*" Header="Name" Binding="{Binding diagnosis.name}" />
-                                    <DataGridTextColumn Width="*" Header="Created" Binding="{Binding created}" />
-                                    <DataGridTextColumn Width="*" Visibility="Hidden" Binding="{Binding id}" />
+                        <DataGrid MaxHeight="400" AutoGenerateColumns="False" CanUserAddRows="False" x:Name="dataGridDiagnosisTemplates" ItemsSource="{Binding}" HorizontalAlignment="Left" Margin="-10, 0, -10, 0" Background="White">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Width="*" Header="Name" Binding="{Binding diagnosis.name}" />
+                                <DataGridTextColumn Width="*" Header="Created" Binding="{Binding created}" />
+                                <DataGridTextColumn Width="*" Visibility="Hidden" Binding="{Binding id}" />
 
-                                    <DataGridTemplateColumn Header="Action">
-                                        <DataGridTemplateColumn.CellTemplate>
-                                            <DataTemplate>
-                                                <Button x:Name="btnEditDiagnosisTemplateRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnEditDiagnosisTemplateRow_Click"  >
-                                                    <materialDesign:PackIcon Kind="TableEdit"/>
-                                                </Button>
-                                            </DataTemplate>
-                                        </DataGridTemplateColumn.CellTemplate>
-                                    </DataGridTemplateColumn>
+                                <DataGridTemplateColumn Header="Action">
+                                    <DataGridTemplateColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Button x:Name="btnEditDiagnosisTemplateRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnEditDiagnosisTemplateRow_Click"  >
+                                                <materialDesign:PackIcon Kind="TableEdit"/>
+                                            </Button>
+                                        </DataTemplate>
+                                    </DataGridTemplateColumn.CellTemplate>
+                                </DataGridTemplateColumn>
 
-                                    <DataGridTemplateColumn>
-                                        <DataGridTemplateColumn.CellTemplate>
-                                            <DataTemplate>
-                                                <Button x:Name="btnDeleteDiagnosisTemplateRow" Background="#3CC2BB" Height="20" Width="30"  Padding="0" Click="btnDeleteDiagnosisTemplateRow_Click" >
-                                                    <materialDesign:PackIcon Kind="Delete"/>
-                                                </Button>
-                                            </DataTemplate>
-                                        </DataGridTemplateColumn.CellTemplate>
-                                    </DataGridTemplateColumn>
+                                <DataGridTemplateColumn>
+                                    <DataGridTemplateColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Button x:Name="btnDeleteDiagnosisTemplateRow" Background="#3CC2BB" Height="20" Width="30"  Padding="0" Click="btnDeleteDiagnosisTemplateRow_Click" >
+                                                <materialDesign:PackIcon Kind="Delete"/>
+                                            </Button>
+                                        </DataTemplate>
+                                    </DataGridTemplateColumn.CellTemplate>
+                                </DataGridTemplateColumn>
 
-                                </DataGrid.Columns>
-                            </DataGrid>
+                            </DataGrid.Columns>
+                        </DataGrid>
                         </Grid>
                     </Border>
-                </ScrollViewer>
 
             </StackPanel>
 
