--- a/Healthtechbd/App.xaml
+++ b/Healthtechbd/App.xaml
@@ -21,6 +21,7 @@
                 <Setter Property="Margin"  Value="0 5 0 25"/>
             </Style>
 
+            <!--Password-->
             <Style TargetType="PasswordBox">
                 <Setter Property="Foreground" Value="#7d7d7d"/>
                 <Setter Property="BorderBrush" Value="#eee"/>
