--- a/Healthtechbd/prescriptionTemplates/StandardTemplate.xaml
+++ b/Healthtechbd/prescriptionTemplates/StandardTemplate.xaml
@@ -40,7 +40,7 @@
             </Grid>
 
             <!--Page Heading Bottom-->
-            <Border Margin="20">
+            <Border Width="740" Margin="20">
                 <StackPanel x:Name="PrintArea">
 
                     <Grid Background="#fff">
