--- a/Healthtechbd/ResetPasswordWindow.xaml
+++ b/Healthtechbd/ResetPasswordWindow.xaml
@@ -21,11 +21,11 @@
                 <Separator/>
 
                 <!--Password-->
-                <TextBlock Style="{StaticResource Level}" Text="Password"/>
+                <TextBlock Style="{StaticResource Level}" Text="Password*"/>
                 <PasswordBox x:Name="Password"/>
 
                 <!--Confirm Password-->
-                <TextBlock Style="{StaticResource Level}" Text="Confirm Password"/>
+                <TextBlock Style="{StaticResource Level}" Text="Confirm Password*"/>
                 <PasswordBox x:Name="ConfirmPassword" Password="" />
 
                 <TextBox x:Name="EmailAddress" Visibility="Hidden"/>
