--- a/Healthtechbd/AddPrescription.xaml
+++ b/Healthtechbd/AddPrescription.xaml
@@ -11,7 +11,6 @@
       Title="AddPrescription" >
 
     <Page.Resources>
-        <local:DiagnosisMedicineModel x:Key="diagnosisMedicineModel"/>
         <local:DiagnosisTestModel x:Key="diagnosisTestModel"/>
 
         <Style TargetType="ComboBox" x:Key="DiagnosisComboBox">
@@ -75,7 +74,7 @@
                         <StackPanel Grid.Column="0">
 
                             <Label Foreground="#333" FontWeight="SemiBold" Content="Patient Details"/>
-                            <Border  Background="#EBEBEB" CornerRadius="5">
+                            <Border  Background="#EEEEEE" CornerRadius="5">
                                 <Grid Height="140">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="12*"/>
@@ -127,7 +126,7 @@
                         <!--Health Data-->
                         <StackPanel Grid.Column="1" Margin="10 0">
                             <Label Foreground="#333" FontWeight="SemiBold" Content="Health Data"/>
-                            <Border Background="#EBEBEB" CornerRadius="5">
+                            <Border Background="#EEEEEE" CornerRadius="5">
                                 <Grid Height="140">
 
                                     <Grid.RowDefinitions>
@@ -165,7 +164,7 @@
                         <StackPanel Grid.Column="2" Margin="10 0">
                             <Label Foreground="#333" FontWeight="SemiBold" Content="Doctors Notes"/>
 
-                            <Border Background="#EBEBEB" CornerRadius="5" Padding="5">
+                            <Border Background="#EEEEEE" CornerRadius="5" Padding="5">
                                 <Grid Height="130">
                                     <TextBox x:Name="DoctorsNotes" TextWrapping="Wrap" Height="130" BorderThickness="0" Style="{StaticResource PrescriptionInputField}" Text=""/>
                                 </Grid>
@@ -177,9 +176,9 @@
                         <StackPanel Grid.Column="3" Margin="0 0 10 0">
                             <Label Foreground="#333" FontWeight="SemiBold" Content="Prescriptions"/>
 
-                            <ScrollViewer Background="#EBEBEB"  FontSize="14" Foreground="#7d7d7d" Height="140" VerticalScrollBarVisibility="Auto">
+                            <ScrollViewer Background="#EEEEEE"  FontSize="14" Foreground="#7d7d7d" Height="140" VerticalScrollBarVisibility="Auto">
 
-                                <Border Padding="3" Background="#EBEBEB">
+                                <Border Padding="3" Background="#EEEEEE">
                                     <StackPanel x:Name="AllPrescription"/>
                                 </Border>
 
@@ -196,21 +195,17 @@
 
                         <!--Diagnosis-->
                         <Grid Height="160" Grid.Column="0" VerticalAlignment="Top"  Margin="10 0 0 0">
-                            <Border CornerRadius="5 5 0 0" Background="#EBEBEB" Padding="8 8">
+                            <Border CornerRadius="5 5 0 0" Background="#EEEEEE" Padding="8 8">
 
                                 <StackPanel>
                                     <TextBlock Text="Diagnosis*" Foreground="#333" FontWeight="SemiBold" Margin="0 10 0 5"/>
 
-                                    <Grid Background="#fff" Height="118">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="37*"/>
-                                            <ColumnDefinition Width="517*"/>
-                                        </Grid.ColumnDefinitions>
-                                        <!--<ScrollViewer Margin="0 -12 0 0" Height="233" VerticalScrollBarVisibility="Auto">-->
-                                        <WrapPanel x:Name="DiagnosisCheckbox" Margin="5,10,5,0" VerticalAlignment="Top" Orientation="Horizontal" Grid.ColumnSpan="2">
+                                    <Grid Background="#fff" Height="114">
+                                        <ScrollViewer VerticalScrollBarVisibility="Auto">
+                                            <WrapPanel x:Name="DiagnosisCheckbox" Margin="5" VerticalAlignment="Top" Orientation="Horizontal">
 
-                                        </WrapPanel>
-                                        <!--</ScrollViewer>-->
+                                            </WrapPanel>
+                                        </ScrollViewer>
                                     </Grid>
 
                                 </StackPanel>
@@ -219,26 +214,26 @@
 
                         <!--Medicines-->
                         <Grid Height="280" Grid.Column="1" Margin="30 0 10 0">
-                            <Border Background="#EBEBEB" CornerRadius="5 5 0 0" Padding="8 8">
+                            <Border Background="#EEEEEE" CornerRadius="5 5 0 0" Padding="8 8">
 
                                 <StackPanel>
                                     <Grid>
                                         <TextBlock VerticalAlignment="Center" Text="Medicines" Width="300" HorizontalAlignment="Left" Foreground="#333" FontWeight="SemiBold"/>
-                                        <materialDesign:PackIcon Kind="Plus" VerticalAlignment="Center" Background="#EBEBEB" Foreground="#000" Height="40" Width="40"  HorizontalAlignment="Right" MouseDown="PackIcon_MouseDown" />
+                                        <materialDesign:PackIcon Kind="Plus" VerticalAlignment="Center" Background="#EEEEEE" Foreground="#000" Height="40" Width="40"  HorizontalAlignment="Right" MouseDown="PackIcon_MouseDown" />
                                     </Grid>
 
                                     <ScrollViewer VerticalScrollBarVisibility="Auto" CanContentScroll="True">
-                                        <StackPanel x:Name="MedicineSec" Background="#fff" Height="225">
+                                        <StackPanel x:Name="MedicineSection" Background="#fff" Height="225">
 
-                                            <Border x:Name="MainSection" Margin="5" CornerRadius="3" BorderBrush="#eee" BorderThickness="1" Height="50">
-                                                <Grid x:Name="SingleMedicineSec" VerticalAlignment="Center" Background="#EBEBEB" Height="50">
-                                                    <ComboBox x:Name="MedicineCombobox" Style="{StaticResource DosMedicineComboBox}"/>
+                                            <!--<Border x:Name="SingleMedicine" Margin="5" CornerRadius="3" BorderBrush="#eee" BorderThickness="1" Height="50">
+                                                <Grid VerticalAlignment="Center" Background="#EEEEEE" Height="50">
+                                                    <ComboBox x:Name="MedicineCombobox_0" Style="{StaticResource DosMedicineComboBox}"/>
                                                     <TextBox Style="{StaticResource DosInputField}"/>
                                                     <Button Background="AliceBlue" BorderBrush="AliceBlue" MinWidth="20" Height="25" Padding="0" Margin="456,0,4,0">
                                                         <Image Source="images/minus.png"/>
                                                     </Button>
                                                 </Grid>
-                                            </Border>
+                                            </Border>-->
                                             
                                             <!--<Grid DataContext="{StaticResource diagnosisMedicineModel}" Height="102">
                                             <control:DiagnosisMedicineChosenControl x:Name="medicineChosen" MedicinesLists="{Binding MedicinesLists}" SelectedMedicines="{Binding SelectedMedicines}"  DefaultMessage="Please Select Items."   ValueMemberPath="Id"  DisplayMemberPath="Name" Margin="-1,-66,1,-56"  />
@@ -261,7 +256,7 @@
 
                         <!--Examination-->
                         <Grid VerticalAlignment="Top" Height="170" Grid.Column="0" Margin="10 0 0 0">
-                            <Border Background="#EBEBEB" CornerRadius="0 0 5 5" Padding="8 8" Margin="0,-122,0,0">
+                            <Border Background="#EEEEEE" CornerRadius="0 0 5 5" Padding="8 8" Margin="0,-122,0,0">
                                 <StackPanel>
                                     <TextBlock Text="Tests" Width="300" HorizontalAlignment="Left" Foreground="#333" FontWeight="SemiBold" Margin="0 10 0 5"/>
 
@@ -277,7 +272,7 @@
 
                         <!--Others Instruction-->
                         <Grid Height="170" Grid.Column="1" Margin="30 0 10 0">
-                            <Border CornerRadius="0 0 5 5" Padding="8 8" Background="#EBEBEB">
+                            <Border CornerRadius="0 0 5 5" Padding="8 8" Background="#EEEEEE">
 
                                 <StackPanel>
                                     <TextBlock Text="Other Instructions" Foreground="#333" FontWeight="SemiBold" Margin="0 0 0 5"/>
