--- a/Healthtechbd/App.xaml
+++ b/Healthtechbd/App.xaml
@@ -49,7 +49,7 @@
                 <Setter Property="Height" Value="30" />
                 <Setter Property="Padding" Value="5 3 0 0" />
                 <Setter Property="FontSize" Value="14" />
-                <Setter Property="MinWidth" Value="260" />
+                <Setter Property="Width" Value="260" />
                 <Setter Property="HorizontalAlignment" Value="Left" />
                 <Setter Property="IsEditable" Value="True" />
                 <Setter Property="IsTextSearchEnabled" Value="False" />
@@ -63,7 +63,7 @@
                 <Setter Property="Height" Value="30" />
                 <Setter Property="Padding" Value="5 3 0 0" />
                 <Setter Property="FontSize" Value="14" />
-                <Setter Property="MinWidth" Value="174" />
+                <Setter Property="Width" Value="174" />
                 <Setter Property="HorizontalAlignment" Value="Left" />
                 <Setter Property="VerticalAlignment" Value="Center" />
             </Style>               
